# light-booru

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  package.json  rust-toolchain.toml  shell.nix
src/: config.rs  database.rs  main.rs  preview.rs  util.rs  watcher.rs
src/routes/: mod.rs
src/templates/: mod.rs
static/styles/: tailwind.css
templates/: base.html  image.html  imageList.html  imageViewer.html  index.html
