[package]
name = "light-booru"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = { version = "0.4" }
axum = { version = "0.8.1", features = ["macros"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace", "compression-gzip", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.86"
tantivy = "0.25.0"
tempfile = "3.10.1"
getopts = "0.2.24"
zip = "2.1.4"
toml = "0.8.15"
url = "2.5.2"
reqwest = { version = "0.12.5", features = ["multipart", "json"] }
moka = { version = "0.12.8", features = ["future"] }
futures-util = "0.3.30"
kamadak-exif = "0.6.1"
filetime = "0.2.25"
itertools = "0.12.1"
rexiv2 = "0.10.0"
serde_json = "1.0.149"
rustnao = "0.3.4"
notify = "6.1.1"
